--- a/capstone project/contact.html
+++ b/capstone project/contact.html
@@ -29,42 +29,50 @@
             .topnav a.active{
                 color: rgb(218, 32, 79);
             }
-            img {
-                border: 5px solid rgb(222, 94, 120);
-                width: 300px;
-                height: 300px;
-            }
             h1{
+              text-align: center;
+              color: gold;
+              font-size: 40px;
+              font-style: italic;
+            }
+            h1::before{
+                content: "❤️";
+            }
+            h1::after{
+                content: "❤️";  
+            }
+            .contactme{
+                position: absolute;
+                left: 50%;
+                top: 30%;
+                background-color: rgb(255, 0, 136);
+                width: 300px;
                 text-align: center;
-                text-transform: capitalize;
-                text-decoration: wavy;
-                color: darkred;
+            border: 5px solid seagreen;
             }
-            .carousel-container{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-            .myslides{
-                display: none;
-                max-width: 100%;
-                max-height: 100%;
-            }
+
         </style>
     </head>
     <body>
         <div class="topnav">
-            <a href="index.html" class = "active">Home</a>
-            <a href="content.html" >content</a>
+            <a href="index.html">Home</a>
+            <a href="content.html"  class = "active" >content</a>
             <a href="gallery.html">gallery</a>
             <a href="contact.html">contact</a>
         </div>
-        <h1>Natural Scenery</h1>
-        <div class="carousel-container">
-            <img class="myslides" src="img.jpg" alt="slide1">
-            <img class="myslides" src="img2.jpg" alt="slide2">
-            <img class="myslides" src="pexels-photo-1666021.jpeg" alt="slide3">
+        <div class="contactme">
+            <h1>form</h1>
+            <form name="contactname">
+                <label for="fname">
+                    Firstname
+                </label>
+                <input type="text"><br><br>
+                 <label for="address">
+                    queries
+                 </label>
+                 <textarea></textarea><br><br>
+                 <input type="submit">
+            </form>
         </div>
-        <script src="s.js"></script>
     </body>
 </html>
