--- a/capstone project/index.html
+++ b/capstone project/index.html
@@ -50,6 +50,15 @@
                 max-width: 100%;
                 max-height: 100%;
             }
+            .footer{
+                left: 0px;
+                bottom: 0px;
+                text-align: center;
+                background-color: aqua;
+                color: cadetblue;
+                width: 100%;
+                position: absolute;
+            }
         </style>
     </head>
     <body>
@@ -63,7 +72,11 @@
         <div class="carousel-container">
             <img class="myslides" src="img.jpg" alt="slide1">
             <img class="myslides" src="img2.jpg" alt="slide2">
-            <img class="myslides" src="pexels-photo-1666021.jpeg" alt="slide3">
+            <img class="myslides" src="images.jpg" alt="slide3">
+        </div>
+        <div class="footer">
+        @ all copyright reserved to manit<br>
+        contact: 📞 +91 4032958092
         </div>
         <script src="s.js"></script>
     </body>
