--- a/capstone project/gallary.html
+++ b/capstone project/gallary.html
@@ -41,7 +41,7 @@
                 transition: 0.4s ease;
                 cursor: pointer;
             }
-            image:hover{
+            img:hover{
                 transform: scale(10);
             }
                 
